SERVER-29886 Do not produce core dumps on ASan builders
(cherry picked from commit b9a8776448c4422b7607fc4f3b53ecf67d8ed77c [formerly d63e014e242832301fde2c9c4b1ccc04be767df2])


Former-commit-id: 144825f7bb036647bbb0cac1b0f6e1a86cacec59

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -1214,7 +1214,12 @@ timeout:
           ${set_sudo}
         fi
 
-        hang_analyzer_option="-c -o file -o stdout -p ${hang_analyzer_processes|dbtest,java,mongo,mongod,mongos,python,_test} -g bsondump,mongodump,mongoexport,mongofiles,mongoimport,mongooplog,mongoreplay,mongorestore,mongostat,mongotop"
+        hang_analyzer_option="-o file -o stdout -p ${hang_analyzer_processes|dbtest,java,mongo,mongod,mongos,python,_test} -g bsondump,mongodump,mongoexport,mongofiles,mongoimport,mongooplog,mongoreplay,mongorestore,mongostat,mongotop"
+
+        if [ ${hang_analyzer_dump_core|true} = true ]; then
+          hang_analyzer_option="-c $hang_analyzer_option"
+        fi
+
         echo "Calling the hang analyzer: PATH=\"/opt/mongodbtoolchain/gdb/bin:$PATH\" $sudo ${python|/opt/mongodbtoolchain/v2/bin/python2} buildscripts/hang_analyzer.py $hang_analyzer_option"
         PATH="/opt/mongodbtoolchain/gdb/bin:$PATH" $sudo ${python|/opt/mongodbtoolchain/v2/bin/python2} buildscripts/hang_analyzer.py $hang_analyzer_option
 
@@ -8406,6 +8411,7 @@ buildvariants:
     multiversion_edition: "targeted"
     num_jobs_available: $(($(grep -c ^processor /proc/cpuinfo) / 3)) # Avoid starting too many mongod's under ASAN build.
     build_mongoreplay: true
+    hang_analyzer_dump_core: false
   tasks:
   - name: compile
   - name: aggregation
@@ -8547,6 +8553,7 @@ buildvariants:
     compile_flags: CC=/usr/bin/clang-3.8 CXX=/usr/bin/clang++-3.8 CPPDEFINES="_GLIBCXX_USE_CXX11_ABI=0" --opt=on --allocator=system --sanitize=address --ssl -j$(grep -c ^processor /proc/cpuinfo) --nostrip VARIANT_DIR=build
     num_jobs_available: $(($(grep -c ^processor /proc/cpuinfo) / 3)) # Avoid starting too many mongod's under ASAN build.
     build_mongoreplay: true
+    hang_analyzer_dump_core: false
   tasks:
   - name: compile
   - name: jstestfuzz
