SERVER-30415 Update Evergreen agent binary name
(cherry picked from commit 589596e792228dbd9a8128c317ca24d8371a2fb3 [formerly 2a910e6c65327a71f6656ecacf6fbca66baeb517])


Former-commit-id: 49aed372a06b74db45c60071d6cc8b38c8efd63a

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -768,7 +768,7 @@ functions:
       script: |
         process_kill_list="(^cl\.exe$|bsondump|java|lein|lldb|mongo|python|_test$|_test\.exe$)"
         # Exclude Evergreen agent processes
-        process_exclude_list="(main)"
+        process_exclude_list="(main|evergreen)"
 
         if [ "Windows_NT" = "$OS" ]; then
           # Get the list of Windows tasks (tasklist list format):
